# vkDuck-project-template

./: .clang-format  .clang-format-include  .gitattributes  .gitignore  README.md  meson.build
licenses/: README.md  tinyfiledialogs-LICENSE  vkDuck-LICENSE
saved_states/: deferred_scene.json  duck-camera-light.json  shadow_state.json  triangle.json
src/: main.cpp
subprojects/: vkDuck.wrap.example  vulkan-memory-allocator.wrap
subprojects/packagefiles/imgui/: meson.build
subprojects/packagefiles/imgui-node-editor/: imgui_bezier_math.inl  imgui_node_editor.cpp  meson.build
subprojects/packagefiles/vulkan-memory-allocator/: meson.build
